<resources>
    <string name="login_app_name">Login</string>
    <string name="login_input_number_hint">请输入手机号</string>
    <string name="login_input_password_hint">请输入密码</string>
    <string name="login_get_verify_code">获取验证码</string>
    <string name="login_login_tips_all">未注册用户登录时将自动创建账号，且代表您已同意《用户协议》和《隐私保护协议》政策</string>
    <string name="login_login_tips_user">《用户协议》</string>
    <string name="login_login_tips_privacy">《隐私保护协议》</string>
    <string name="login_agree_deal_tips">请先同意协议</string>
    <string name="login_password_login">密码登录</string>
    <string name="login_verify_code_login">验证码登录</string>
    <string name="login_password">密码:</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="login_modify_success">修改成功</string>
    <string name="login_verify_wrong">验证码不正确</string>

    <string name="login_input_verification_code">请输入验证码</string>
    <string name="login_input_verification_code2">此操作需要验证您的身份</string>
    <string name="login_re_get_verify_code">重新获取</string>
    <string name="login_input_right_number_tips">请输入正确的手机号</string>
    <string name="login_send_verify_code">发送验证码</string>
    <string name="login_send_verify_code_tips">发送短信验证码至以下手机</string>
    <string name="login_reset_password">重新设置密码</string>
    <string name="login_reset_password_tips">密码需8&#8211;16位，至少包含字母、数字、符号2种组合。</string>
    <string name="login_reset_password_error_tips">密码必须是包含数字、字母组合</string>
    <string name="login_modify">修改</string>
    <string name="login_psd_error">密码格式不正确</string>
    <string name="login_send_success">已发送验证码</string>
    <string name="login_send_failed">发送验证码失败</string>
    <string name="login_choice_country">选择国家地区</string>
    <string name="login_quickly_tips">登录后有新天地，快来探索吧！</string>
    <string name="login_count_down_tips">s后重新获取</string>
    <string name="login_verify_send_code_tips">验证码已发送至</string>


    <string name="login_format_verification_phone_tips" formatted="false">验证码已发送至%s</string>
    <string name="login_format_verification_count_down_tips" formatted="false">%s后重新获取</string>

    <string name="login_search_hint">搜索</string>
    <string name="login_country_plus">+%s</string>
    <string name="login_china">中国</string>
    <string name="login_phone_error">手机格式不对</string>
</resources>