<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.rm.module_login.viewmodel.ResetPasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_22"
        android:paddingEnd="@dimen/dp_22">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/BusinessTextStyleFirst_0"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/login_reset_password" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/BusinessTextStyleSecond_3"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_8"
            android:singleLine="true"
            android:text="@string/login_reset_password_tips" />

        <LinearLayout
            android:id="@+id/login_by_password_password_input_lay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:layout_marginTop="@dimen/dp_24"
            android:background="@drawable/business_shape_stroke_round_e8e8e8"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BusinessTextStyleFirst_2"
                android:text="@string/login_password" />

            <androidx.appcompat.widget.AppCompatEditText
                style="@style/PasswordInputTextStyle"
                afterTextChanged="@{viewModel.checkInput}"
                isShowPasswordText="@{viewModel.isShowPasswordText}"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_weight="1"
                android:hint="@string/login_input_password_hint"
                android:maxLength="16"
                android:paddingStart="@dimen/dp_12"
                android:paddingEnd="0dp"
                android:text="@={viewModel.password}" />

            <androidx.appcompat.widget.AppCompatImageButton
                bindClick="@{viewModel.eyesClick}"
                bindSrc="@{viewModel.eyesResId}"
                isVisible="@{!viewModel.isInputTextEmpty}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/login_ic_close_eyes" />
        </LinearLayout>

        <TextView
            style="@style/BusinessTextStyleErrorTips"
            bindText="@{viewModel.errorTips}"
            android:layout_marginStart="@dimen/dp_22"
            android:layout_marginTop="@dimen/dp_6"
            tools:text="@string/login_reset_password_error_tips" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/ButtonStyle"
            bindClick="@{viewModel.modify}"
            android:layout_height="@dimen/dp_56"
            android:layout_marginTop="@dimen/dp_54"
            android:enabled="@{viewModel.isPasswordInputOk}"
            android:text="@string/login_modify" />
    </LinearLayout>
</layout>