<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.rm.module_login.viewmodel.ForgetPasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_22"
        android:paddingEnd="@dimen/dp_22">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/BusinessTextStyleFirst_0"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/login_send_verify_code" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/BusinessTextStyleSecond_3"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_8"
            android:singleLine="true"
            android:text="@string/login_send_verify_code_tips" />

        <include
            layout="@layout/login_include_layout_phone_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:layout_marginTop="@dimen/dp_45"
            bind:phoneInputViewModel="@{viewModel.phoneInputViewModel}" />

        <TextView
            style="@style/BusinessTextStyleErrorTips"
            bindText="@{viewModel.errorTips}"
            android:layout_marginStart="@dimen/dp_22"
            android:layout_marginTop="@dimen/dp_6"
            tools:text="手机号有误" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/ButtonStyle"
            bindClick="@{viewModel.getCode}"
            android:layout_height="@dimen/dp_56"
            android:layout_marginTop="@dimen/dp_54"
            android:enabled="@{viewModel.phoneInputViewModel.isInputText}"
            android:text="@string/login_get_verify_code" />
    </LinearLayout>
</layout>