<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.rm.module_login.viewmodel.LoginByVerifyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/login_by_verify_code_icon"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_marginTop="@dimen/dp_88"
            android:src="@mipmap/login_ic_launcher"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/login_by_verify_code_input_lay"
            android:layout_width="@dimen/dp_315"
            android:layout_height="@dimen/dp_56"
            android:layout_marginTop="@dimen/dp_50"
            android:background="@drawable/business_shape_stroke_round_e8e8e8"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_by_verify_code_icon">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login_by_verify_code_country_code"
                style="@style/BusinessTextStyleFirst_2"
                bindClick="@{viewModel.showCountryList}"
                android:text="@{viewModel.countryCode}" />

            <com.rm.business_lib.wedgit.arrow.ArrowView
                bindClick="@{viewModel.showCountryList}"
                android:layout_width="@dimen/dp_22"
                android:layout_height="@dimen/dp_22"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_marginEnd="@dimen/dp_12"
                android:paddingStart="@dimen/dp_4"
                android:paddingTop="@dimen/dp_7"
                android:paddingEnd="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_7"
                app:arrow_direction="bottom"
                app:arrow_line_color="@color/business_text_color_333333" />

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="@dimen/dp_30"
                android:background="@color/business_color_e8e8e8" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_by_verify_code_input"
                style="@style/PhoneInputTextStyle"
                afterTextChanged="@{viewModel.checkInput}"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/login_input_number_hint"
                android:paddingStart="@dimen/dp_12"
                android:paddingEnd="0dp"
                android:text="@={viewModel.phone}" />

            <androidx.appcompat.widget.AppCompatImageButton
                bindClick="@{viewModel.clearInput}"
                isVisible="@{viewModel.isInputText}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:src="@drawable/login_ic_cancel" />
        </LinearLayout>

        <TextView
            style="@style/BusinessTextStyleErrorTips"
            bindText="@{viewModel.errorTips}"
            android:layout_marginStart="@dimen/dp_22"
            android:layout_marginTop="@dimen/dp_6"
            app:layout_constraintLeft_toLeftOf="@id/login_by_verify_code_input_lay"
            app:layout_constraintTop_toBottomOf="@id/login_by_verify_code_input_lay"
            tools:text="手机号有误" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_by_verify_code_get_btn"
            style="@style/ButtonStyle"
            bindClick="@{viewModel.getCode}"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_56"
            android:layout_marginTop="@dimen/dp_52"
            android:enabled="@{viewModel.isInputText}"
            android:text="@string/login_get_verify_code"
            app:layout_constraintLeft_toLeftOf="@id/login_by_verify_code_input_lay"
            app:layout_constraintRight_toRightOf="@id/login_by_verify_code_input_lay"
            app:layout_constraintTop_toBottomOf="@id/login_by_verify_code_input_lay" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_19"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@id/login_by_verify_code_input_lay"
            app:layout_constraintRight_toRightOf="@id/login_by_verify_code_input_lay"
            app:layout_constraintTop_toBottomOf="@id/login_by_verify_code_get_btn">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/login_selector_check_box_button"
                android:checked="@={viewModel.isCheck}" />

            <TextView
                android:id="@+id/login_by_verify_code_tips"
                style="@style/BusinessTextStyleSecond_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_6"
                tools:text="未注册用户登录时将自动创建账号，且代表您已同意《用户协议》和《隐私保护协议》政策" />
        </LinearLayout>

        <TextView
            style="@style/BusinessTextStyleFirst_3"
            bindClick="@{viewModel.loginByPassword}"
            android:layout_marginBottom="@dimen/dp_44"
            android:padding="@dimen/dp_5"
            android:text="@string/login_password_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>